--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@vueuse/core": "^13.0.0",
     "d3": "^7.9.0",
     "pinia": "^3.0.1",
     "vue": "^3.5.13"
