--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@types/d3-selection": "^3.0.11",
     "@vueuse/core": "^13.0.0",
     "d3": "^7.9.0",
     "pinia": "^3.0.1",
