--- a/package.json
+++ b/package.json
@@ -17,8 +17,11 @@
     "@types/d3-selection": "^3.0.11",
     "@vueuse/core": "^13.0.0",
     "d3": "^7.9.0",
+    "konva": "^9.3.20",
     "pinia": "^3.0.1",
-    "vue": "^3.5.13"
+    "vue": "^3.5.13",
+    "vue-konva": "^3.2.0",
+    "vue-router": "^4.5.0"
   },
   "devDependencies": {
     "@tsconfig/node22": "^22.0.0",
